infrastructure/deployment/spark/spark-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-driver-headless
  labels:
    app: spark-driver
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    component: singleuser-server
  ports:
    - protocol: TCP
      port: 7070
      targetPort: 7070
