infrastructure/deployment/spark/spark-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-spark
  namespace: default
spec:
  podSelector:
    matchLabels:
      spark-role: driver
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              spark-role: executor
      ports:
        - protocol: TCP
          port: 7070
  egress:
    - to:
        - podSelector:
            matchLabels:
              spark-role: executor
